[package]
name = "bc-podcast-api"
version = "0.1.0"
authors = ["Guillermo Gonzalez <ggjnez92@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
