[package]
name = "bc-podcast-api"
version = "0.1.0"
authors = ["Guillermo Gonzalez <ggjnez92@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.36"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["async-std-runtime"]
