[package]
name = "bc-podcast-api"
version = "0.1.0"
authors = ["Guillermo Gonzalez <ggjnez92@gmail.com>"]
edition = "2018"

[lib]
name = "bc_podcast_api"
path = "src/lib.rs"
doc = true

[[bin]]
name = "bc-podcast-api"
path = "src/main.rs"

[dependencies]
rocket = "0.4.5"
rocket_cors = "0.5.1"
jsonwebtoken = "7"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
async-trait = "0.1.36"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]

[dependencies.mongodb]
version = "1.0.0"
default-features = false
features = ["async-std-runtime"]

[dev-dependencies]
regex = "1"
serde_json = "1.0"
